--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -60,7 +60,7 @@
                 {% endfor %} 
               </div>
             </div>    
-                   
+            {% include "partials/components/image-feature.njk" %}
       </div>            
     </article>
   </main>
