--- a/src/_includes/partials/components/image-feature.njk
+++ b/src/_includes/partials/components/image-feature.njk
@@ -1,8 +1,8 @@
 <h3>From this...</h3>
-{% for image in data.beforeImages %}
-    <img src="{{ image }}"></img>
+{% for image in beforeImages %}
+    <img src="/{{ image }}"></img>
 {% endfor %}
 <h3>To this...</h3>
-{% for image in data.afterImages %}
-    <img src="{{ image }}"></img>
+{% for image in afterImages %}
+    <img src="/{{ image }}"></img>
 {% endfor %}
