Added another case study

--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -48,7 +48,10 @@
             </div>
 
         </div>
-        <div class="featured-case-studies-wrapper">
+        <div class="wrapper">
+          {% include "partials/components/testimonials.njk" %}
+        </div>
+        <div class="wrapper">
             {% include "partials/components/featured.njk" %}
         </div>
     </div>
