--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -16,6 +16,7 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 main#main-content:focus {
@@ -510,6 +511,101 @@ img.cs-image {
     font-size: 4rem;
 }
 
+/* Testimonials */
+.slider {
+    width: 80%;
+    text-align: center;
+    overflow: hidden;
+}
+
+.slides {
+    display: flex;
+    
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    
+    /*
+    scroll-snap-points-x: repeat(300px);
+    scroll-snap-type: mandatory;
+    */
+}
+
+.slides h2 {
+    font-weight: 600;
+}
+
+.slides::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+.slides::-webkit-scrollbar-thumb {
+    background: rgb(85, 26, 139);
+    border-radius: 10px;
+}
+
+.slides::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.slides > .slide-content {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-right: 50px;
+    border-radius: 10px;
+    transform-origin: center center;
+    transform: scale(1);
+    transition: transform 0.5s;
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Don't need button navigation */
+@supports (scroll-snap-type: x mandatory) {
+    .slider > a {
+      display: none;
+    }
+}
+
+.slider > a {
+    display: inline-flex;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: white;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 0 0 0.5rem 0;
+    position: relative;
+}
+
+.slider > a:active {
+    top: 1px;
+}
+
+.slider > a:focus {
+    background: #551a8b;
+    color: #fff;
+}
+
+.testimonials-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 6%;
+}
+
 @media only screen and (max-width: 1220px) {
     .intro-under-title {
         font-size: 3.3em;
@@ -745,7 +841,7 @@ img.cs-image {
         height: 2px;
         margin-bottom: 5px;
         position: relative;
-        background: #ffffff;
+        background-color: #ffffff;
         border-radius: 3px;
         z-index: 1;
         transform-origin: 5px 0px;
