--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -20,39 +20,38 @@
 {% block content %}
   <main id="main-content" tabindex="-1">
     <div class="home-container">
-        <div class="intro-top-container">
-            <div class="intro-top-wrapper">
-                <div class="intro-top-left wobble-hor-bottom con-animate">
-                    <img src="/images/me.jpg" class"intro-image" />
-                        <div class="confetti"></div>
-                        <div class="confetti"></div>
-                        <div class="confetti"></div>
-                        <div class="confetti"></div>
-                        <div class="confetti"></div>
-                        <div class="confetti"></div>
-                </div>
-                <div class="intro-top-right">
-                    <h1 class="post-sub-title text-500 gap-top-300">{{ aboutme.job }}</h1>
-                    <h2 class="intro-title">
-                        <div class="link post-title" rel="bookmark">{{ aboutme.name }}</a>
-                    </h2>
-                    <h3 class="intro-caption">{{ aboutme.blurb | safe }}</h3> 
-                    
-                    
-                        <div class="intro-icon">
-                        <p>See my featured work below</p>
-                        <br>
-                            <a href="#featured-case-studies"> {% include "icons/arrow-down.svg" %}</a>
-                        </div>
-                </div>
-            </div>
-
+      <div class="homepage-landing-quote width-80 margin-auto-lr align-center display-flex">
+        <h1 class="custom-hp-quote width-100"><span class="custom-hp-quote-1">The <span class="custom-hp-quote-2 color-turq">all-rounder</span> you never knew you needed.</span></h1>
+        <div class="homepage-landing-r-img wobble-hor-bottom con-animate">
+              <img src="/images/me.jpg" class="circle-image" />
+                  <div class="confetti"></div>
+                  <div class="confetti"></div>
+                  <div class="confetti"></div>
+                  <div class="confetti"></div>
+                  <div class="confetti"></div>
+                  <div class="confetti"></div>
+        </div>
+      </div>
+    </div>
+    <div class="homepage-about-peep">
+      <div class="hpge-abt-peep header color-blue">
+        <h4>Who are you?? 🤔</h4>
+      </div>
+      <div class="hpge-abt-peep desc color-dark-grey">
+        {{ aboutme.midheadline | safe }}
+      </div>
+      <div class="hpge-abt-peep cta">
+        <a href="#homepage-featured" class="color-turq no-underline">Find out more!</a>
+      </div>
+    </div>
+    <div class="full-bleed-feature pad-5p">
+    </div>
+    <div class="normal-container" id="homepage-featured">
+        <div class="wrapper">
+            {% include "partials/components/featured.njk" %}
         </div>
         <div class="wrapper">
           {% include "partials/components/testimonials.njk" %}
-        </div>
-        <div class="wrapper">
-            {% include "partials/components/featured.njk" %}
         </div>
     </div>
   </main>
