--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -49,10 +49,6 @@ header[role="banner"] {
     display: inline-block!important;
 }
 
-.nav-item {
-    margin-right: 2em;
-}
-
 #mobile-nav-button > input {
     display: none;
 }
@@ -68,8 +64,61 @@ header[role="banner"] {
     object-fit: cover;
 }
 
+.color-purple {
+    color: #3b2e5a!important;
+}
+
+.color-blue {
+    color: #394989!important;
+}
+
+.color-turq {
+    color: #4ea0ae!important;
+}
+
+.color-yellow {
+    color: #fff48f!important;
+}
+
+.color-dark-grey {
+    color: #313131!important;
+}
+
 img {
     width: 50%;
+}
+
+a.no-underline {
+    text-decoration: none!important;
+}
+
+.logo-img {
+    max-width: 90px;
+}
+
+.inline-blocks {
+    display: inline-block;
+}
+
+.width-100 {
+    width: 100%
+}
+
+.width-70 {
+    width: 70%
+}
+
+.width-80 {
+    width: 80%
+}
+
+.width-auto {
+    width: auto;
+}
+
+.margin-auto-lr {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 * > .left-2 {
@@ -78,6 +127,10 @@ img {
 
 * > .right-1 {
     width: 50%;
+}
+
+.align-middle {
+    vertical-align: middle;
 }
 
 .beforeImages img, .afterImages img {
@@ -108,6 +161,26 @@ img {
 
 .font-500w {
     font-weight: 500!important;
+}
+
+.font-600w {
+    font-weight: 600!important;
+}
+
+.font-800w {
+    font-weight: 800!important;
+}
+
+.display-flex {
+    display: flex;
+}
+
+.align-center {
+    align-content: center;
+}
+
+.align-me-center {
+    align-self: center;
 }
 
 a.link {
@@ -162,6 +235,61 @@ a.text-button {
     vertical-align: top;
 }
 
+/* Homepage */
+h1.custom-hp-quote {
+    font-size: 4rem;
+}
+
+.custom-hp-quote-1 {
+    font-size: 4rem;
+}
+
+.custom-hp-quote {
+    display: flex;
+    align-items: center;
+    z-index: 2;
+}
+
+.homepage-landing-r-img {
+    max-width: 300px;
+    max-height: 300px;
+    position: relative;
+    right: 10%;
+    bottom: 0;
+    z-index: 0;
+}
+
+.circle-image {
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.homepage-landing-r-img .circle-image {
+    width: 200px;
+    height: 200px;
+    z-index: -1;
+}
+
+.homepage-about-peep {
+    width: 35%;
+    bottom: 2%;
+    left: 5%;
+    position: absolute;
+}
+
+.hpge-abt-peep.header {
+    font-size: 1.5em;
+}
+
+.hpge-abt-peep.desc {
+    font-size: 1.1em;
+}
+
+.hpge-abt-peep.cta {
+
+}
+
+
 /* More Page */
 .ff {
     margin-top: 5em;
@@ -176,6 +304,40 @@ a.text-button {
     vertical-align: top;
 }
 
+/* Navigation */
+
+nav .nav_list .link.nav-item {
+    display: block;
+    text-align: right;
+}
+
+.home-header {
+    display: block;
+}
+
+.lean-left {
+    text-align: left;
+    float: left;
+}
+
+.lean-right {
+    text-align: right;
+    float: right;
+}
+
+.lean-item-left {
+    margin-left: 0;
+    margin-right: auto;
+}
+
+.lean-item-right {
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.max-width-40 {
+    max-width: 40%;
+}
 
 /* Homepage Button Text */
 
@@ -187,9 +349,16 @@ a.text-button {
     margin-bottom: 2em;
 }
 
-.home-container,
+.home-container {
+    margin: 16% 10%;
+}
+
+.normal-container {
+    margin: 5% 5%;
+}
+
 .case-studies-container {
-    margin: 5rem 2rem;
+    margin: 5% 10%;
 }
 
 .intro-top-container {
@@ -205,7 +374,7 @@ a.text-button {
 }
 
 .intro-top-right {
-    width: 33%;
+    width: 40%;
     display: inline-block;
     vertical-align: middle;
 }
@@ -899,7 +1068,7 @@ img.cs-image {
         transform: none;
       }
 
-    .wrapped-item nav {
+    .home-header nav {
         font-size: 1.5rem;
     }
 
