New pages for skills pages

--- a/src/_includes/layouts/more.njk
+++ b/src/_includes/layouts/more.njk
@@ -7,10 +7,10 @@
 {% block content %}
   <main id="main-content" tabindex="-1">
     <article class="[ post ] [ h-entry ]">
-      <div class"special-page top">
+      <div class="special-page top">
         <div class="post-list__item wrapper">
             <div class="post-list__item left-2 wrapped-item">
-            <img src="/images/me.jpg" class"post-image" />
+            <img src="/images/me.jpg" class="post-image" />
             </div>
             <div class="post-list__item right-1 wrapped-item">
             <p class="post-sub-title text-500 gap-top-300">{{ aboutme.job }}</p>
