--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -15,7 +15,7 @@
 {% block content %}
   <main id="main-content" tabindex="-1">
     <article class="[ post ] [ h-entry ]">
-      <div class"special-page top">
+      <div class="special-page top">
             <div class="cs-box">
               <div class="cs-box-left">
                 <div class="cs-box-left-top">
