--- a/src/_includes/partials/components/skills-section.njk
+++ b/src/_includes/partials/components/skills-section.njk
@@ -1,7 +1,7 @@
 {% block content %}
   <main id="main-content" tabindex="-1">
     <article class="[ post ] [ h-entry ]">
-      <div class"special-page top">
+      <div class="special-page top">
         <div class="post-list__item wrapper">
         <div class="skills-sec">
             <h3 class="h3-post-title">
