--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -3,6 +3,8 @@
 
 {# Intro content #}
 {% set introHeading = title %}
+{% set introDesc = title %}
+
 
 {% block content %}
   <main id="main-content" tabindex="-1">
