--- a/src/_includes/partials/components/testimonials.njk
+++ b/src/_includes/partials/components/testimonials.njk
@@ -1,18 +1,28 @@
-<div class="testimonials-wrapper">
-    <div class="slider">
-        {% for story in testimonials.items %}
-            <a href="#slide-{{ story.number }}">{{ story.number }}</a>
-        {% endfor %}
-        <div class="slides">
+{% set headingText = 'Here are the cool things people say' %}
+{% set headingDesc = 'See what past team members and clients say.' %}
+<section id="case-study-caro" class="case-column-version spaced-90 col-cream">
+    <div class="case-study-left">
+        <div class="heading-inline-wrapper">
+            <h3>{{ headingText }}</h3>
+            <p>{{ headingDesc }}</p>
+        </div>
+    </div>
+    <div class="case-study-right">
+        <div class="main-carousel case-caro-content" data-flickity='{ "wrapAround": true, "cellAlign": "left", "contain": true }'>
             {% for story in testimonials.items %}
-            <div id="slide-{{ story.number }}" class="slide-content">
-                <div class="slide-text">
-                    <h2>“</h2>   {{ story.quote | safe }}   <h2>„</h2>
-                    <h3 class="intro-caption">{{ story.name }}</h3>
-                    <h3 class="intro-caption">{{ story.position }} - {{ story.company }}</h3>
+                <div class="quote-cell carousel-cell col-yellow">
+                    <div class="quote-cell-top">
+                        <p>{{ story.quote | safe }}</p> 
+                    </div>
+                    <div class="quote-cell-bot">
+                        <h5>{{ story.name }}</h5>
+                        <p>{{ story.position }} - {{ story.company }}</p>
+                    </div>
                 </div>
-            </div>
+
             {% endfor %}
         </div>
     </div>
-</div>
+
+
+</section>
