--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -32,27 +32,13 @@
                         <div class="confetti"></div>
                 </div>
                 <div class="intro-top-right">
-                    <h1 class="post-sub-title text-500 gap-top-300">{{ aboutme.job }}</h1>
+                    <h1 class="post-sub-title text-500 gap-top-300">Oops! This website is going through some updates.</h1>
                     <h2 class="intro-title">
-                        <div class="link post-title" rel="bookmark">{{ aboutme.name }}</a>
+                        <div class="link post-title" rel="bookmark">Please come back later :-)</a>
                     </h2>
-                    <h3 class="intro-caption">{{ aboutme.blurb | safe }}</h3> 
-                    
-                    
-                        <div class="intro-icon">
-                        <p>See my featured work below</p>
-                        <br>
-                            <a href="#featured-case-studies"> {% include "icons/arrow-down.svg" %}</a>
-                        </div>
                 </div>
             </div>
 
-        </div>
-        <div class="wrapper">
-          {% include "partials/components/testimonials.njk" %}
-        </div>
-        <div class="wrapper">
-            {% include "partials/components/featured.njk" %}
         </div>
     </div>
   </main>
