--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -20,7 +20,7 @@
 
 {% block content %}
   <main id="main-content" tabindex="-1">
-    <div class="home-container">
+    <div class="spaced-container">
     </div>
     <div class="normal-container" id="homepage-featured">
         <div class="wrapper">
