--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -1,2 +1,17 @@
 <footer>
+    <section id="footer" class="spaced">
+        <div class="col">
+            <div class="col-20">
+                <div class="display-flex h-100 centre-me-top">
+                    <a href="/" class="img-link" ><img class="logo-img centre-me-top" src="/uploads/logo-white.svg"/></a>
+                </div>
+            </div>
+            <div class="col-80 nav centre-me">
+                <div class="navigation-container centre-me">
+                    <p>Made with love in Melbourne</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
 </footer>
