--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -27,6 +27,7 @@ main#main-content {
     bottom: 0;
     right: 0;
     left: 0;
+    padding: 0;
 }
 
 main#main-content:focus {
@@ -78,30 +79,6 @@ p {
     line-height: 125%;
 }
 
-a.link {
-    color: --var(dark-blue);
-    text-decoration: none!important;
-}
-
-a.link::after {
-    content: " >>"
-}
-
-a.link:hover, .nav-link:hover {
-    color: --var(blue);
-    border-bottom: .2rem solid --var(blue)!important;
-}
-
-.nav-link {
-    color: black;
-    text-decoration: none!important;
-}
-
-.link.link-component {
-    padding-top: 4px;
-    padding-bottom: 4px;
-    width: 100%;
-}
 
 
 /* Colours */
@@ -139,14 +116,48 @@ a.link:hover, .nav-link:hover {
     background-color: var(--green);
 }
 
+/* Links */
+a.link, a {
+    color: var(--dark-blue);
+    text-decoration: none!important;
+}
+
+a.link::after, a::after {
+    content: " >>";
+}
+
+a.nav-link::after, a.img-link::after {
+    content: ''!important;
+}
+
+a.nav-link:hover, a.img-link:hover {
+    border-bottom: none!important;
+}
+
+a.link:hover, .nav-link:hover, a:hover {
+    color: var(--blue);
+    border-bottom: .2rem solid var(--blue)!important;
+}
+
+.nav-link {
+    color: black;
+    text-decoration: none!important;
+}
+
+.link.link-component {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: 100%;
+}
+
 /* Structure */
 
-.home-container {
-    margin: 16% 10%;
+.spaced-container, section.spaced-container {
+    margin: 2% 10%;
 }
 
 section {
-    margin-bottom: 30px;
+    padding-top: 30px;
 }
 
 .wrapper, #wrapper {
@@ -247,14 +258,15 @@ section {
 
 .col-top {
     display: block;
+    height: 120px;
 }
 
 .col-mid {
-    height: 20%
+    height: 65px;
 }
 
 .col-bot {
-    min-height: 60%
+    min-height: 180px;
 }
 
 .col-ful-img {
@@ -267,6 +279,10 @@ img.full-img {
     object-fit: cover;
 }
 
+img.full-img.comparison-img-cropped {
+    max-height: 350px;
+}
+
 .col-item {
     display: inline-block;
     align-self: center;
@@ -274,6 +290,7 @@ img.full-img {
     margin-right: 2%;
     padding: 3% 2%;
     margin-bottom: 2%;
+    height: auto;
 }
 
 #1-col-text .col-content {
@@ -334,6 +351,10 @@ img.full-img {
     background-repeat: no-repeat;
     border-radius: 3px;
     margin-bottom: 60px;
+}
+
+.gallery-cell.image-gallery {
+    height: 300px!important;
 }
 
 /* quote-cell doesn't have an image */
@@ -477,6 +498,23 @@ header[role="banner"] {
 
 .wrapper {
     display: block;
+}
+
+/* Footer */
+
+footer {
+    background-color: var(--green);
+    z-index: 0;
+    position: relative;
+    margin: 0;
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 200px;
+}
+
+footer, footer p, footer h3 {
+    color: white!important;
 }
 
 /* Navigation */
