--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,6 +15,7 @@
   {% include "partials/global/site-head.njk" %}
   {% block content %}
   {% endblock content %}
+  {% include "partials/global/site-foot.njk" %}
   <script type="module" src="/js/components/theme-toggle.js" async defer></script>
   <script>
     if ('serviceWorker' in navigator) {
