--- a/src/_includes/layouts/designSystem.njk
+++ b/src/_includes/layouts/designSystem.njk
@@ -9,7 +9,7 @@
 
 {% block content %}
 <main id="main-content" tabindex="-1">
-    <div class="home-container">
+    <section class="spaced-container">
         {% include "partials/components/heading.njk" %}
         <section id="fonts-section">
             <h1>H1 Heading</h1>
@@ -35,7 +35,7 @@
 
             {% include "partials/components/comparison-gallery.njk" %}
         </section>
-    </div>
+    </section>
     <section id="wrapper spaced">
         {% include "partials/components/testimonials.njk" %}
     </section>
