--- a/src/_includes/partials/components/case-feature.njk
+++ b/src/_includes/partials/components/case-feature.njk
@@ -1,10 +1,10 @@
 {% set caroTitle = 'Full-stack digital experience design' %}
 {% set caroDesc = "Full-stack digital experience design to streamline the marketing for managers across 40 countries/regions." %}
 {% set caroImg = '/images/example-mock.png' %}
-<section id="case-study-caro" class="featured">
+<section id="case-study-caro" class="featured spaced-container">
     <div class="case-study-bot">
         <div class="case-caro-content">
-                <div class="case-feature-cell featured" style="background-image: url({{ caroImg }})">
+                <div class="case-feature-cell featured" style="background-image: url(/{{ caroImg }})">
                     <div class="case-caro-desc featured">
                         <h5>{{ caroTitle }}</h5>
                         <p>{{ caroDesc }}</p>
@@ -15,6 +15,5 @@
 
         </div>
     </div>
-
 
 </section>
