--- a/src/_includes/partials/components/columns.njk
+++ b/src/_includes/partials/components/columns.njk
@@ -1,25 +1,30 @@
-{% set colNo = '4' %}
-<section id="cols">
-    <div class="col-wrapper">
-        {% for column in range(0, colNo) %}
-            <div class="col-item col-grey col-{{ colNo }}">
-                <div class="col-top">
-                    <div class="col-content centre-me-top">
-                        <img src="/images/me.jpg" class="icon-circle" />
+{% set colLength = pageSection.colTitle | length %}
+{% if colLength > 1 %}
+    {% set headingText = pageSection.colTitle %}
+    {% include "partials/components/heading.njk" %}
+{% endif %}
+    <section id="cols" class="spaced-container">
+        <div class="col-wrapper">
+            {% for column in pageSection.columnContent %}
+                <div class="col-item col-grey col-{{ pageSection.columnContent | length }}">
+                    {% if column.colImg | length !== 0 %}
+                    <div class="col-top">
+                        <div class="col-content centre-me-top">
+                            <img src="{% if column.colImg | first !== '/' %}/{% endif %}{{ column.colImg }}" class="icon-circle" />
+                        </div>
+                    </div>
+                    {% endif %}
+                    <div class="col-mid">
+                        <div class="col-content centre-me-top">
+                            <h5 class="centre-me-top">{{ column.colHeading }}</h5>
+                        </div>
+                    </div>
+                    <div class="col-bot">
+                        <div class="col-content">
+                            <p>{{ column.colDescription | safe }}</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-mid">
-                    <div class="col-content">
-                        <h5>Customer Research & Insights</h5>
-                    </div>
-                </div>
-                <div class="col-bot">
-                    <div class="col-content">
-                        <p>I can help you identify user needs and challenges - and translate them to actionable insights.</p>
-                    </div>
-                    {% include "partials/components/link.njk" %}
-                </div>
-            </div>
-        {% endfor %}
-    </div>
-</section>
+            {% endfor %}
+        </div>
+    </section>
