--- a/src/_includes/partials/components/heading.njk
+++ b/src/_includes/partials/components/heading.njk
@@ -1,5 +1,10 @@
 {% set headingSize = 3 %}
-{% set headingText = 'How can I help you?' %}
-<div class="heading-wrapper">
-<h{{ headingSize }}>{{ headingText }}</h{{ headingSize }}>
-</div>
+<section class="spaced-container">
+    <div class="heading-wrapper">
+    {% if pageSection.headingText | length !== 0 %}
+        <h3>{{ pageSection.headingText }}</h3>
+    {% elif headingText | length !== 0 %}
+        <h3>{{ headingText }}</h3>
+    {% endif %}
+    </div>
+</section>
