--- a/src/_includes/partials/components/image-feature.njk
+++ b/src/_includes/partials/components/image-feature.njk
@@ -1,12 +1,12 @@
 <div class="beforeImages left-2 inline-block align-top">
 <h4>From this...</h4>
 {% for image in beforeImages %}
-    <img src="/{{ image }}"></img>
+    <img src="{% if image | first !== '/' %}/{% endif %}{{ image }}"></img>
 {% endfor %}
 </div>
 <div class="afterImages right-1 inline-block align-top">
 <h4>To this...</h4>
 {% for image in afterImages %}
-    <img src="/{{ image }}"></img>
+    <img src="{% if image | first !== '/' %}/{% endif %}{{ image }}"></img>
 {% endfor %}
 </div>
