--- a/src/_includes/partials/components/metrics.njk
+++ b/src/_includes/partials/components/metrics.njk
@@ -1,19 +1,20 @@
-{% set colNo = '4' %}
+<section id="wrapper spaced">
 <section id="metrics" class="spaced-90 col-cream">
     <div class="col-wrapper">
-        {% for column in range(0, colNo) %}
-            <div class="col-item col-{{ colNo }}">
+        {% for column in pageSection.metricLoop %}
+            <div class="col-item col-{{ pageSection.metricLoop | length }}">
                 <div class="col-top">
                     <div class="col-content centre-me-top">
-                        <h2>12</h2>
+                        <h2>{{ column.metricNumber }}</h2>
                     </div>
                 </div>
                 <div class="col-bot">
                     <div class="col-content">
-                        <p>interviews conducted.</p>
+                        <p>{{ column.metricDescription }}</p>
                     </div>
                 </div>
             </div>
         {% endfor %}
     </div>
+</section>
 </section>
