--- a/src/_includes/partials/components/testimonials.njk
+++ b/src/_includes/partials/components/testimonials.njk
@@ -1,10 +1,9 @@
-{% set headingText = 'Here are the cool things people say' %}
-{% set headingDesc = 'See what past team members and clients say.' %}
+<section id="wrapper spaced">
 <section id="case-study-caro" class="case-column-version spaced-90 col-cream">
     <div class="case-study-left">
         <div class="heading-inline-wrapper">
-            <h3>{{ headingText }}</h3>
-            <p>{{ headingDesc }}</p>
+            <h3>{{ pageSection.testimonialGalleryTitle }}</h3>
+            <p>{{ pageSection.testimonialDescription }}</p>
         </div>
     </div>
     <div class="case-study-right">
@@ -23,6 +22,5 @@
             {% endfor %}
         </div>
     </div>
-
-
+</section>
 </section>
